--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ html.lenis, html.lenis body {
 html {
   scroll-behavior: auto !important;
   height: auto;
+  scrollbar-gutter: stable;
 }
 
 :root {
